--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
+    "nodemailer": "^6.7.7",
     "request": "^2.88.2",
     "swagger-tools": "^0.10.4"
   },
